--- a/wetube/src/views/home.pug
+++ b/wetube/src/views/home.pug
@@ -1,7 +1,4 @@
-doctype html 
-html(lang="ko")
-  head 
-    title Wetube 
-  body 
-    h1 Welcome to Wetube 
-    foot &copy; 2023 Wetube
+extends base.pug
+
+block content 
+  h1 Home!
