--- a/Wetube/src/views/edit.pug
+++ b/Wetube/src/views/edit.pug
@@ -1,4 +1,9 @@
 extends base.pug
 
 block content 
-  h1 Edit Video
+  h4 Update Video
+  form(method="POST")
+    input(name="title" placeholder="Video Title" value=video.title required)
+    input(type="text" placeholder="Description" name="description" value=video.description minLength=20 required )
+    input(type="text" placeholder="Hashtags, separated by comma." name="hashtags" value=video.hashtags.join() required )
+    input(type="submit" value="Save")
