--- a/Wetube/src/views/base.pug
+++ b/Wetube/src/views/base.pug
@@ -12,7 +12,7 @@ html(lang="ko")
             a(href="/") Home
           if loggedIn
             li 
-              a(href="/logout") Log out 
+              a(href="/users/logout") Log out 
             li 
               a(href="/my-profile") #{loggedInUser.name}의 Profile
           else 
@@ -20,8 +20,6 @@ html(lang="ko")
               a(href="/join") Join 
             li 
               a(href="/login") Login
-            li 
-              a(href="/search") Search
           li 
             a(href="/search") Search 
           li 
