--- a/Wetube/src/views/upload.pug
+++ b/Wetube/src/views/upload.pug
@@ -3,7 +3,9 @@ extends base.pug
 block content 
   if errorMessage
     span=errorMessage 
-  form(method="POST")
+  form(method="POST" enctype="multipart/form-data")
+    label(for="video") Video File 
+    input(type="file" accept="video/*" required id="video" name="video")
     input(type="text" placeholder="Title" name="title" maxLength=80 required )
     input(type="text" placeholder="Description" name="description" minLength=20 required )
     input(type="text" placeholder="Hashtags, separated by comma." name="hashtags" required )
