--- a/Wetube/src/views/partials/header.pug
+++ b/Wetube/src/views/partials/header.pug
@@ -1,8 +1,11 @@
 header  
-  a(href="/")
+  a(href="/").header__logo
     i.fab.fa-youtube
   nav 
-    ul      
+    ul
+      li 
+        a(href="/search")
+          i.fas.fa-search
       if loggedIn
         li 
           a(href="/videos/upload") Upload Video
@@ -12,10 +15,9 @@ header
           a(href="/users/edit") Edit Profile
         li 
           a(href="/users/logout") Log out 
-      else 
+      else
         li 
-          a(href="/join") Join 
-        li 
-          a(href="/login") Login
-      li 
-        a(href="/search") Search 
+          a(href="/login") Login 
+        li
+          a(href="/join").header__btn Join 
+        
