--- a/Wetube/src/views/edit-profile.pug
+++ b/Wetube/src/views/edit-profile.pug
@@ -1,9 +1,7 @@
 extends base.pug
 
 block content
-  h1=errorMessage
-  img(src=`/${loggedInUser.avatarUrl}` width="100px" height="100px")
-  form(method="POST" enctype="multipart/form-data")
+  form(method="POST" enctype="multipart/form-data").edit-profile__form
     label(for="avatar") Avatar
     input(type="file" id="avatar" name="avatar" accept="images/*")
     input(name="name" type="text" placeholder="Name" value=loggedInUser.name required)
@@ -13,4 +11,5 @@ block content
     input(type="submit" value="Update Profile")
     hr
     if !loggedInUser.socialOnly
-      a(href="change-password") Change Password &rarr;
+      div.edit-profile__password
+        a(href="change-password") Change Password &rarr;
