--- a/Wetube/src/views/partials/header.pug
+++ b/Wetube/src/views/partials/header.pug
@@ -10,11 +10,17 @@ header
         li 
           a(href="/videos/upload") Upload Video
         li 
-          a(href=`/users/${loggedInUser._id}`) My Profile
-        li 
           a(href="/users/edit") Edit Profile
         li 
           a(href="/users/logout") Log out 
+        li 
+          a(href=`/users/${loggedInUser._id}`)
+            if !loggedInUser.avatarUrl
+              span 😊
+            else if loggedInUser.socialOnly
+              img.header__avatar(src=loggedInUser.avatarUrl)
+            else 
+              img.header__avatar(src="/" + loggedInUser.avatarUrl)
       else
         li 
           a(href="/login") Login 
