--- a/Wetube/src/views/watch.pug
+++ b/Wetube/src/views/watch.pug
@@ -1,14 +1,31 @@
 extends base.pug
 
 block content
-  video(src=`/${video.fileUrl}` controls)
-  div 
-    p=video.description
-    small=video.createdAt
-  div 
-    small Uploaded by 
-      a(href=`/users/${video.owner._id}`)=video.owner.username
-  if loggedInUser && (String(loggedInUser._id) === String(video.owner._id))
-    a(href=`${video.id}/edit`) Edit Video &rarr;
-    br 
-    a(href=`${video.id}/delete`) Delete Video &rarr; 
+  div#videoContainer
+    video(src=`/${video.fileUrl}`)
+    div
+      button#play Play
+      button#mute Mute 
+      input(type="range" step="0.1" value=0.5 min="0" max="1")#volumn
+      div
+        span#currentTime 00:00 
+        span / 
+        span#totalTime 00:00
+      div 
+        input(type="range" step="1" value=0 min="0")#timeline
+      div
+        button#fullScreen Enter Full Screen
+  //-
+    div 
+      p=video.description
+      small=video.createdAt
+    div 
+      small Uploaded by 
+        a(href=`/users/${video.owner._id}`)=video.owner.username
+    if loggedInUser && (String(loggedInUser._id) === String(video.owner._id))
+      a(href=`${video.id}/edit`) Edit Video &rarr;
+      br 
+      a(href=`${video.id}/delete`) Delete Video &rarr;
+
+block scripts
+  script(src="/static/js/videoPlayer.js")
