--- a/Wetube/src/views/upload.pug
+++ b/Wetube/src/views/upload.pug
@@ -1,6 +1,9 @@
 extends base.pug
 
-block content 
+block content
+  div
+    video#preview
+    button#startBtn Start Recording
   if errorMessage
     span=errorMessage 
   form(method="POST" enctype="multipart/form-data")
@@ -10,3 +13,6 @@ block content
     input(type="text" placeholder="Description" name="description" minLength=20 required )
     input(type="text" placeholder="Hashtags, separated by comma." name="hashtags" required )
     input(type="submit" value="Upload Video")
+
+block scripts 
+  script(src="/static/js/recorder.js")
