--- a/Wetube/src/client/scss/components/forms.scss
+++ b/Wetube/src/client/scss/components/forms.scss
@@ -2,12 +2,13 @@ form {
   max-width: 420px;
   margin: 0 auto;
   padding: 30px;
-  background-color: rgba($color: #000000, $alpha: 0.5);
+  background-color: rgba($color: #000000, $alpha: 0.7);
   border-radius: 10px;
-  border: 1px solid rgba($color: #fff, $alpha: 0.2);
+  border: 1px solid rgba($color: #fff, $alpha: 0.1);
 }
 
-input:not([type="range"]) {
+input:not([type="range"]),
+input[type="submit"] {
   all: unset;
   padding: 15px 20px;
   border-radius: 5px;
@@ -24,10 +25,22 @@ input:not([type="range"]) {
 
 input[type="submit"],
 .social__btn {
+  border-radius: 5px;
   padding: 12px 20px;
   background-color: white;
   color: rgba($color: $red, $alpha: 1);
   text-align: center;
+  background-color: white !important;
+  color: rgba($color: $red, $alpha: 1) !important;
+  text-align: center !important;
   cursor: pointer;
   display: block;
+  border: none;
+  &:focus {
+    outline: none;
+  }
+  &:disabled {
+    opacity: 0.5;
+    pointer-events: none;
+  }
 }
