--- a/Wetube/src/views/watch.pug
+++ b/Wetube/src/views/watch.pug
@@ -39,7 +39,7 @@ block content
                     i.fas.fa-comment
                     span  #{comment.text}
                     if String(comment.owner) === String(loggedInUser._id)
-                        span  ❌
+                        span.deleteComment  ❌
 block scripts
     script(src="/static/js/videoPlayer.js")
     if loggedIn
