--- a/Wetube/src/views/partials/header.pug
+++ b/Wetube/src/views/partials/header.pug
@@ -18,9 +18,9 @@ header
             if !loggedInUser.avatarUrl
               span 😊
             else if loggedInUser.avatarUrl.includes("github")
-              img.header__avatar(src=loggedInUser.avatarUrl crossorigin)
+              img.header__avatar(src=loggedInUser.avatarUrl)
             else 
-              img.header__avatar(src=loggedInUser.avatarUrl crossorigin)
+              img.header__avatar(src=loggedInUser.avatarUrl)
       else
         li 
           a(href="/login") Login 
