--- a/Wetube/src/views/partials/header.pug
+++ b/Wetube/src/views/partials/header.pug
@@ -17,10 +17,10 @@ header
           a(href=`/users/${loggedInUser._id}`)
             if !loggedInUser.avatarUrl
               span 😊
-            else if loggedInUser.socialOnly
-              img.header__avatar(src=loggedInUser.avatarUrl)
+            else if loggedInUser.avatarUrl.includes("github")
+              img.header__avatar(src=loggedInUser.avatarUrl crossorigin)
             else 
-              img.header__avatar(src="/" + loggedInUser.avatarUrl)
+              img.header__avatar(src=loggedInUser.avatarUrl crossorigin)
       else
         li 
           a(href="/login") Login 
