--- a/VanillaJS/css/style.css
+++ b/VanillaJS/css/style.css
@@ -1,14 +1,119 @@
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  margin: 0 auto;
+}
 .hidden {
   display: none;
 }
-img {
+
+.background {
   position: absolute;
   width: 100%;
   height: 100%;
-  left: 0px;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
   z-index: -1;
-  opacity: 80%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+ul {
+  list-style: none;
+}
+
+input[type="text"] {
+  width: 180px;
+  height: 25px;
+  border: 3px solid whitesmoke;
+  border-radius: 5px;
+}
+
+.button-name {
+  border: none;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.button-name:hover {
+  border: none;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+#todo-form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  text-align: center;
+  font-size: 15px;
+  color: black;
+  opacity: 60%;
+}
+
+#todo-list {
+  position: absolute;
+  top: 90%;
+  left: 90%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  text-align: center;
+  font-size: 25px;
+  color: black;
+  opacity: 60%;
+}
+
+#login-form {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  text-align: center;
+  font-size: 15px;
+  color: whitesmoke;
+  opacity: 60%;
+}
+#greeting {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 30px;
+  color: black;
+  opacity: 60%;
+}
+
+#clock {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 90px;
+  opacity: 60%;
+}
+#quote {
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  text-align: center;
+  color: whitesmoke;
+  opacity: 60%;
+  font-size: 25px;
+  background: black;
+  border-radius: 10px;
+}
+#weather {
+  position: absolute;
+  top: 10%;
+  left: 90%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  text-align: center;
+  font-size: 15px;
+  opacity: 60%;
 }
